objects/CN_Approve_Process_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>CN_CCE1_KA__c</fullName>
        <label>CCE1 KA</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_CCE2_DS__c</fullName>
        <label>CCE2 DS</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_CCE3_WS__c</fullName>
        <label>CCE3 WS</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_CCE4_QSR__c</fullName>
        <label>CCE4 QSR</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_CCE5_B2B__c</fullName>
        <label>CCE5 B2B</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_CCE_Director_UserId__c</fullName>
        <label>CCE Director UserId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_CEO_UserId__c</fullName>
        <label>CEO User ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_CFO_UserId__c</fullName>
        <label>CFO User ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_CS_Group_Email__c</fullName>
        <label>CS Group Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CN_Finance_AR_UserId__c</fullName>
        <label>Finance AR User ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_Finance_MDM_UserId__c</fullName>
        <label>Finance MDM User ID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_MKT_Group_Email__c</fullName>
        <label>MKT Group Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CN_Sales_MDM_UserId__c</fullName>
        <label>Sales MDM User ID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_WholeSales_Development_Supervisor__c</fullName>
        <label>WholeSales Development Supervisor</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_CCE4_QSR__c</fullName>
        <label>CCE4 QSR</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CN_CCE5_B2B__c</fullName>
        <label>CCE5 B2B</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>CN Approve Process Settings</label>
</CustomObject>